<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wanswings.TextFileXpander.MainActivity" >

    <item
        android:id="@+id/action_load_data"
        android:showAsAction="never"
        android:title="@string/action_load_data"/>
    <item
        android:id="@+id/action_refresh"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_add_notification"
        android:showAsAction="never"
        android:title="@string/action_add_notification"/>
    <item
        android:id="@+id/action_view_type"
        android:showAsAction="never"
        android:title="@string/action_view_type"/>
    <item
        android:id="@+id/action_reset"
        android:showAsAction="never"
        android:title="@string/action_reset"/>

</menu>
